# mori-canvas

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.en.md  README.md  RUST-REWRITE-STATUS.md  agentos-manifest.json  install.sh  package-lock.json  package.json  render.yaml  setup.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker.yml  keepalive.yml  release.yml
client/: index.html
client/public/: manifest.webmanifest
client/public/examples/: consultant.json  engineer.json  index.json  marketing.json  meeting.json  pm.json
client/public/templates/: README.md
client/src/: App.tsx  fitCardSize.test.ts  fitCardSize.ts  i18n.ts  main.tsx
client/src/locales/: en.json  zh-TW.json
deploy/: mori-canvas.env.example  mori-canvas.service  nginx.conf.example
docs/: BACKLOG.md  examples.html  faq.html  guide.html  index.html  selfhost.html  site.css
docs/superpowers/plans/: 2026-06-10-meeting-pipeline-and-layout.md
prompts/: board-agent.md  card-edit.md  common.md  summary.md  transcript-cleanup.md
scripts/: setup-whisper-windows.ps1
server/: agent.ts  board-types.ts  sync-server.ts
server-rs/: Cargo.toml
server-rs/src/: agent.rs  apply.rs  board_types.rs  cleanup.rs  layout.rs  lib.rs  llm.rs  main.rs  prompts.rs  store.rs  stt.rs  sync.rs  yval.rs
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
