[package]
name = "mori-canvas-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3"
yrs = "0.24"
yrs-warp = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
bytes = "1"
once_cell = "1"
percent-encoding = "2"
