[package]
name = "mori-canvas-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
futures-util = "0.3"
yrs = "0.24"
yrs-warp = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
bytes = "1"
once_cell = "1"
percent-encoding = "2"
include_dir = "0.7"
dotenvy = "0.15"
ferrous-opencc = "0.4"
